<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/geoform_lay2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/cinza3"
        android:paddingTop="3dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_get_tasks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ico_update"
            android:gravity="center_vertical|left"
            android:text="@string/btn_sync_tasks" />
    </LinearLayout>

    <!-- Name Label -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/cinza3" >

        <Button
            android:id="@+id/btn_get_tiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/map"
            android:gravity="center_vertical|left"
            android:text="@string/btn_sync_tiles" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="348dp"
        android:background="@color/cinza3"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/logout"
            android:gravity="center_vertical|left"
            android:text="@string/btn_logout" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="40dip"
        android:singleLine="true" />

    
    <!-- Button to show session data -->

</LinearLayout>